<resources>
    <string name="app_name">MicroMaster</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="empty_courses">No courses have been added yet.</string>
    <string name="empty_homeworks">No homework has been added yet.</string>
    <string name="empty_homeworks_enroll">Enroll to see homework for this course.</string>
    <string name="empty_homeworks_ta_request">Request TA access to see homework for this course.</string>
    <string name="empty_homeworks_ta_pending">Your TA request is pending.</string>
    <string name="empty_profile_courses">No related courses yet.</string>
    <string name="login_title">MicroMaster</string>
    <string name="login_subtitle">Track courses, homework, and class access from one place.</string>
    <string name="register_title">Create account</string>
    <string name="register_subtitle">Choose your role and add a profile photo if you want.</string>
    <string name="account_type">Account type</string>
    <string name="profile_photo">Profile photo</string>
    <string name="profile_courses_title">Related courses</string>
    <string name="courses_title">Courses</string>
    <string name="courses_count_format">%1$d courses available</string>
    <string name="profile_course_count_format">%1$d related courses</string>
    <string name="course_detail_title">Course details</string>
    <string name="course_homework_count_format">%1$d homework items</string>
    <string name="teacher_format">Teacher: %1$s</string>
    <string name="units_format">%1$d units</string>
    <string name="role_format">Role: %1$s</string>
    <string name="add_course_title">Add course</string>
    <string name="add_course_subtitle">Add the course name, units, and a short description.</string>
    <string name="add_homework_title">Add homework</string>
    <string name="add_homework_subtitle">Add a short note and a public http or https file link.</string>
    <string name="homework_file_ready">File link ready</string>
    <string name="homework_file_missing">No valid file link</string>
    <string name="homework_creator_format">By %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
